--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -8,6 +8,17 @@ h1 {
     font-weight: normal;
 }
 
+.fa-plus {
+    float: right;
+}
+
+body {
+    background: #2BC0E4;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #EAECC6, #2BC0E4);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #EAECC6, #2BC0E4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
 ul {
     list-style: none;
     margin: 0;
@@ -29,12 +40,30 @@ li:nth-child(2n) {
     background: #f7f7f7;
 }
 
+span {
+    background-color: #e74c3c;
+    height: 40px;
+    margin-right: 20px;
+    text-align: center;
+    color: white;
+    width: 0;
+    display: inline-block;
+    transition: 0.2s linear;
+    opacity: 0;
+}
+
+li:hover span {
+    width: 40px;
+    opacity: 1.0;
+}
+
 input {
     font-size: 18px;
     background-color: #f7f7f7;
     width: 100%;
     padding: 13px 13px 13px 20px;
     color: #2980b9;
+    border: 3px solid rgba(0, 0, 0, 0);
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
